@@ -86,6 +86,7 @@ piuparts (0.50) UNRELEASED; urgency=low
 
   [ David Steele ]
   * detect_well_known_errors:
+    - Sort known error and issue packages by reverse dependency count.
     - Minor HTML syntax fix.
     - Minor template integration.
  
